add form for adding news

--- a/app/components/singleArticle/singleArticle.tpl.html
+++ b/app/components/singleArticle/singleArticle.tpl.html
@@ -1,2 +1,4 @@
-<h3 class="news-title">{{test}}</h3>
-<p class="news-description">{{article}}</p>
+<h3 class="news-title">{{article.title}}</h3>
+at <a ng-href="{{article.link}}" class="article-link">{{article.link}}</a>
+<span class="article-author">posted by {{article.author}}</span>
+<span class="article-comments"><strong>{{article.comments.length}}</strong> comments</span>
