--- a/app/components/login/login.tpl.html
+++ b/app/components/login/login.tpl.html
@@ -1,6 +1,6 @@
 <div class="login-form">
   <form class="" ng-submit="submit()">
-    <input type="text" placeholder="Login" ng-model="login">
+    <input type="text" placeholder="Login" ng-model="login" autofocus="">
     <input type="password" placeholder="Password" ng-model="password">
     <input type="submit" value="SUBMIT">
   </form>
