add comments support

--- a/app/components/submit/submit.tpl.html
+++ b/app/components/submit/submit.tpl.html
@@ -1,5 +1,5 @@
 <div class="submit">
-  <form ng-controller="formController" ng-submit="submit()">
+  <form ng-submit="submit()">
     <p>Please, type here your question!</p>
     <textarea name="title" rows="8" cols="80" ng-model="title"></textarea>
     <p>Type in link</p>
