--- a/app/components/listArticles/listArticles.tpl.html
+++ b/app/components/listArticles/listArticles.tpl.html
@@ -1,10 +1,13 @@
 <ul class="main-list">
   <li ng-repeat="article in articles">
-    <a ui-sref="article({ id: article._id })">
+    <a class="title" ui-sref="article({ id: article._id })">
       <h3 class="news-title">{{article.title}}</h3>
-      at <a ng-href="{{article.link}}" class="article-link">{{article.link}}</a>
-      <span class="article-author">posted by <a ui-sref="users({ username: article.author })">{{article.author}}</a></span>
-      <span class="article-comments"><strong>{{article.comments.length}}</strong> comments</span>
     </a>
+      <a ng-href="{{article.link}}" class="article-link">at {{article.link}}</a>
+      <div>
+        <span class="article-author">posted by <span><a ui-sref="users({ username: article.author })">{{article.author}}</a></span></span>
+        <span>{{article['creation date'] | date : longDate}}</span>
+        <span class="article-comments"><strong>{{article.comments.length}}</strong> comments</span>
+      </div>
   </li>
 </ul>
