--- a/app/components/singleArticle/singleArticle.tpl.html
+++ b/app/components/singleArticle/singleArticle.tpl.html
@@ -3,15 +3,15 @@ at <a ng-href="{{article.link}}" class="article-link">{{article.link}}</a>
 <span class="article-author">posted by {{article.author}}</span>
 <span class="article-comments"><strong>{{article.comments.length}}</strong> comments</span>
 <p class="add-comment" ng-click="toggleCommentForm()">Add comment</p>
-<div class="comment-form" ng-if="isShowCommentForm">
+<div class="comment-form" ng-show="isShowCommentForm">
   <form ng-submit="submitComment(comment)">
     <p>Please, type here your comment!</p>
-    <textarea name="title" rows="8" cols="80" ng-model="comment"></textarea>
+    <textarea name="title" rows="8" cols="80" ng-model="comment" required></textarea>
     <input type="submit" value="SUBMIT" class="submit-btn">
   </form>
 </div>
 <div class="comments-container">
-  <div ng-repeat="comment in article.comments">
+  <div class="comment" ng-repeat="comment in article.comments">
     <div>
       <span>Author: </span>
       <span>{{comment.author}}</span>
