--- a/app/components/login/login.tpl.html
+++ b/app/components/login/login.tpl.html
@@ -1,7 +1,7 @@
 <div class="login-form">
-  <form class="" ng-submit="submit()">
-    <input type="text" placeholder="Login" ng-model="login" autofocus="">
-    <input type="password" placeholder="Password" ng-model="password">
+  <form class="" ng-submit="submit(login, password)">
+    <input type="text" placeholder="Login" ng-model="login" autofocus="" required>
+    <input type="password" placeholder="Password" ng-model="password" required">
     <input type="submit" value="SUBMIT">
   </form>
 </div>
