--- a/app/components/user/user.tpl.html
+++ b/app/components/user/user.tpl.html
@@ -1,3 +1,4 @@
 <h3>User panel</h3>
 <h4>Username: {{user.username}}</h4>
 <p>Password: {{user.password}}</p>
+<p class="logout" ng-if="!user.password" ng-click="logout()">Logout</p>
