--- a/app/stylesheets/styles.css
+++ b/app/stylesheets/styles.css
@@ -97,9 +97,8 @@ list-articles li {
   margin-bottom: 5px;
 }
 
-.add-comment,
-input[type="submit"],
-.logout {
+.custom-btn,
+input[type="submit"] {
   width: 100px;
   height: 30px;
   margin: 5px 0;
@@ -112,15 +111,18 @@ input[type="submit"],
   transition: box-shadow 0.2s linear, background 0.2s linear;
 }
 
-.add-comment:hover,
-input[type="submit"]:hover,
-.logout:hover {
+.custom-btn:hover,
+input[type="submit"]:hover {
   background: rgb(238, 236, 243);
   box-shadow: 1px 1px 2px rgb(14, 13, 13);
   cursor: pointer;
 }
 
-.add-comment:hover {
+.delete-btn:hover {
+  background: rgba(255, 2, 2, 0.55);
+}
+
+.custom-btn:hover {
   cursor: pointer;
 }
 
