--- a/app/components/login/login.tpl.html
+++ b/app/components/login/login.tpl.html
@@ -5,3 +5,4 @@
     <input type="submit" value="SUBMIT">
   </form>
 </div>
+<div class="validation-error" ng-show="registerErr">{{validationErr}}</div>
