--- a/app/components/singleArticle/singleArticle.tpl.html
+++ b/app/components/singleArticle/singleArticle.tpl.html
@@ -1,4 +1,4 @@
-<h3 class="news-title">{{article.title}}</h3>
+<span class="article-rating">{{article.rating}}</span><h3 class="news-title">{{article.title}}</h3>
 at <a ng-href="{{article.link}}" class="article-link">{{article.link}}</a>
 <span class="article-author">posted by {{article.author}}</span>
 <span class="article-comments"><strong>{{article.comments.length}}</strong> comments</span>
