--- a/app/stylesheets/styles.css
+++ b/app/stylesheets/styles.css
@@ -152,3 +152,26 @@ input[type="submit"]:hover {
 .comment-form textarea:focus {
   outline: none;
 }
+
+.rate-up,
+.rate-down {
+  width: 17px;
+  height: 17px;
+  color: #af1d1d;
+  display: inline-block;
+  text-decoration: none;
+}
+
+.article-rating {
+  display: block;
+  width: 18px;
+  height: 18px;
+  float: left;
+  background: rgba(99, 225, 226, 0.45);
+  border-radius: 9px;
+  margin: 3px 5px 0 0;
+  text-align: center;
+  line-height: 18px;
+  font-family: serif;
+  font-weight: 600;
+}
