--- a/app/components/user/user.tpl.html
+++ b/app/components/user/user.tpl.html
@@ -1,23 +1,30 @@
-<h1>User panel</h1>
-<h2>Username: {{user.username}}</h2>
-<div>
-  <p class="custom-btn" ng-if="!user.password" ng-click="logout()">Logout</p>
-  <p class="custom-btn" ng-if="!user.password" ng-click="deleteUser()">Delete account</p>
-</div>
-<h2>Your comments</h2>
-<div class="comments-container">
-  <div class="comment" ng-repeat="comment in user.comments">
-    <div>
-      <span>Article: </span>
-      <a ui-sref="article({ id: comment.article })">{{comment.title}}</a>
-    </div>
-    <div>
-      <span>Comment: </span>
-      <span>{{comment.comment}}</span>
-    </div>
-    <div>
-      <span>Date: </span>
-      <span>{{comment.date | date: 'medium'}}</span>
+<div ng-hide="userErr">
+  <h1>User panel</h1>
+  <h2>Username: {{user.username}}</h2>
+  <div>
+    <p class="custom-btn" ng-if="!user.password" ng-click="logout()">Logout</p>
+    <p class="custom-btn" ng-if="!user.password" ng-click="deleteUser()">Delete account</p>
+  </div>
+  <div ng-show="user.comments.length">
+    <h2>Your comments</h2>
+    <div class="comments-container">
+      <div class="comment" ng-repeat="comment in user.comments">
+        <div>
+          <span>Article: </span>
+          <a ui-sref="article({ id: comment.article })">{{comment.title}}</a>
+        </div>
+        <div>
+          <span>Comment: </span>
+          <span>{{comment.comment}}</span>
+        </div>
+        <div>
+          <span>Date: </span>
+          <span>{{comment.date | date: 'medium'}}</span>
+        </div>
+      </div>
     </div>
   </div>
+</div>
+<div ng-show="userErr">
+  <h1>{{userErr}}</h1>
 </div>
