--- a/app/components/singleArticle/singleArticle.tpl.html
+++ b/app/components/singleArticle/singleArticle.tpl.html
@@ -1,6 +1,7 @@
 <span class="article-rating">{{article.rating}}</span><h3 class="news-title">{{article.title}}</h3>
 at <a ng-href="{{article.link}}" class="article-link">{{article.link}}</a>
 <span class="article-author">posted by {{article.author}}</span>
+<span>{{article['creation date'] | date : longDate}}</span>
 <span class="article-comments"><strong>{{article.comments.length}}</strong> comments</span>
 <div>
   <p class="custom-btn" ng-click="toggleCommentForm()">Add comment</p>
