--- a/app/components/user/user.tpl.html
+++ b/app/components/user/user.tpl.html
@@ -2,8 +2,8 @@
   <h1>User panel</h1>
   <h2>Username: {{user.username}}</h2>
   <div>
-    <p class="custom-btn" ng-if="!user.password" ng-click="logout()">Logout</p>
-    <p class="custom-btn" ng-if="!user.password" ng-click="deleteUser()">Delete account</p>
+    <p class="custom-btn" ng-if="isOriginalUser" ng-click="logout()">Logout</p>
+    <p class="custom-btn" ng-if="isOriginalUser" ng-click="deleteUser()">Delete account</p>
   </div>
   <div ng-show="user.comments.length">
     <h2>Your comments</h2>
@@ -20,6 +20,28 @@
         <div>
           <span>Date: </span>
           <span>{{comment.date | date: 'medium'}}</span>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div ng-show="user.likes.length">
+    <h2>You like</h2>
+    <div class="comments-container">
+      <div class="comment" ng-repeat="id in user.likes">
+        <div>
+          <span>Article: </span>
+          <a ui-sref="article({ id })">{{id}}</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div ng-show="user.dislikes.length">
+    <h2>You don't like</h2>
+    <div class="comments-container">
+      <div class="comment" ng-repeat="id in user.dislikes">
+        <div>
+          <span>Article: </span>
+          <a ui-sref="article({ id })">{{id}}</a>
         </div>
       </div>
     </div>
