--- a/app/components/login/login.tpl.html
+++ b/app/components/login/login.tpl.html
@@ -1,3 +1,4 @@
+<h3>{{currentState === 'register' ? 'Register' : 'Login'}}</h3>
 <div class="login-form">
   <form class="" ng-submit="submit(login, password)">
     <input type="text" placeholder="Login" ng-model="login" autofocus="" required>
